[gd_scene load_steps=3 format=2]

[ext_resource path="res://ValidatorSetting.gd" type="Script" id=1]
[ext_resource path="res://ValidatorSet.tscn" type="PackedScene" id=2]

[node name="ValidatorSetting" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )
validatorSetPrefab = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Root" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidatorList" type="ItemList" parent="Root"]
margin_right = 120.0
margin_bottom = 600.0
rect_min_size = Vector2( 120, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidatorSet" parent="Root" instance=ExtResource( 2 )]
margin_left = 124.0
margin_right = 244.0
size_flags_horizontal = 0

[node name="SubValidator" type="HBoxContainer" parent="Root"]
margin_left = 248.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidatorSet" parent="Root/SubValidator" instance=ExtResource( 2 )]
margin_right = 120.0

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddSub" type="Button" parent="Menu"]
margin_right = 95.0
margin_bottom = 20.0
text = "+Sub"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="Menu"]
margin_top = 24.0
margin_right = 95.0
margin_bottom = 44.0
text = "OK"
[connection signal="item_activated" from="Root/ValidatorList" to="." method="_on_ValidatorList_item_activated"]
[connection signal="selected" from="Root/ValidatorSet" to="." method="on_select"]
[connection signal="pressed" from="Menu/AddSub" to="." method="_on_AddSub_pressed"]
[connection signal="pressed" from="Menu/OK" to="." method="_on_OK_pressed"]
